--- a/Machine_Learning_Wines.ipynb
+++ b/Machine_Learning_Wines.ipynb
@@ -40,8 +40,34 @@
         "from sklearn.metrics import accuracy_score\n",
         "import seaborn as sns\n"
       ],
-      "execution_count": 1,
+      "execution_count": 20,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Descrição:\n",
+        "Wines é um dataset disponibilizado pela biblioteca seaborn com 3 classes de vinhos e 13 features. \n",
+        "\n",
+        "# Objetivo:\n",
+        "O desafio é criar um modelo de Machine Learning capaz de interpretar as características do vinho e indicar a qual classe o vinho pertence.\n",
+        "\n",
+        "#Etapas\n",
+        "Estratificação dos dados em treinamento, validação e testes;\n",
+        "Criação de um pipeline: Normalização dados, redução de dimensionalidade (PCA) e seleção de um modelo (KNN);\n",
+        "Seleção de hiperparâmetros;\n",
+        "Avaliação de acurácia, UnderFitting e OverFitting;\n",
+        "Calculo do intervalo de confiança\n",
+        "\n",
+        "\n",
+        "\n",
+        "# Documentação Dataset:\n",
+        "\n",
+        "https://www.kaggle.com/c/wine-m/data"
+      ],
+      "metadata": {
+        "id": "acdDB_lAZSwp"
+      }
     },
     {
       "cell_type": "markdown",
@@ -59,7 +85,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TxAxXnujYG0G",
-        "outputId": "0d54a465-3a0f-4c53-d713-fb74bbc061e0"
+        "outputId": "c18277e4-31bb-4652-b116-a2092ed7e2d6"
       },
       "source": [
         "wines = datasets.load_wine()\n",
@@ -69,7 +95,7 @@
         "##Quantas caracteristicas existem ?\n",
         "X.shape"
       ],
-      "execution_count": 2,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -79,7 +105,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 21
         }
       ]
     },
@@ -90,6 +116,32 @@
       },
       "source": [
         "**DATA PREPARATION**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(wines)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0WaZjtUNYFxw",
+        "outputId": "684a0b33-cfc1-494d-bfcc-3d9353098386"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "sklearn.utils.Bunch"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
       ]
     },
     {
@@ -108,6 +160,9 @@
       },
       "source": [
         "###Split dos dados em treinamento, validacao e teste\n",
+        "### Adicionamos um random_state = 1 para garantir a reprodutibilidade da estratificação dos dados, ou seja, sempre estratificar da mesma forma toda vez que o código \n",
+        "## for executado\n",
+        "\n",
         "X_train_valid, X_test, y_train_valid, y_test = train_test_split(X, y, test_size=0.3, random_state=1, stratify=y) ### \n",
         "X_train, X_valid, y_train, y_valid = train_test_split(X_train_valid, y_train_valid, test_size=0.5, random_state=1) ### "
       ],
@@ -274,7 +329,7 @@
         "outputId": "3363fcbf-dbc3-4cf0-8de0-942a6644ba9c"
       },
       "source": [
-        "## Melhores Hyperparametros do modelo PCA-LDA\n",
+        "## Melhores Hyperparametros do modelo PCA-KNN\n",
         "print(grid.best_params)"
       ],
       "execution_count": 9,
